# freddy

./: .clang-format  .clang-tidy  .gdbinit  .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md
.github/: dependabot.yml
.github/workflows/: build-test.yml  build.yml  check.yml  ci-cd.yml  test.yml
BHybridD/: CMakeLists.txt  hybridTest.cpp
BHybridD/ExpansionNodes/: e0.txt
bliffs/: c1355.blif  c1908.blif  c2670.blif  c3540.blif  c432.blif  c5315.blif  c880.blif
include/: freddy.hpp
include/eddy/: config.hpp
include/eddy/dd/: bdd.hpp  bhd.hpp  bmd.hpp
include/eddy/detail/: common.hpp  manager.hpp  variable.hpp
include/freddy/: config.hpp  expansion.hpp  operation.hpp  util.hpp
include/freddy/dd/: add.hpp  bdd.hpp  bhd.hpp  bmd.hpp  bruh.hpp  kfdd.hpp  mtbdd.hpp  phdd.hpp  phdd_edge_weight.hpp
include/freddy/detail/: common.hpp  edge.hpp  entry.hpp  manager.hpp  node.hpp  operation.hpp  statistics.hpp  variable.hpp
include/freddy/detail/operation/: antiv.hpp  compose.hpp  conj.hpp  has_const.hpp  ite.hpp  mul.hpp  plus.hpp  repl.hpp  replace.hpp  restr.hpp  sharpsat.hpp
include/freddy/op/: add.hpp  antiv.hpp  compose.hpp  conj.hpp  has_const.hpp  ite.hpp  mul.hpp  plus.hpp  repl.hpp  restr.hpp  sharpsat.hpp
py/: freddy_pretty_printer.py
test/: mult.cpp  queen.cpp  util.cpp  util_blif.cpp
test/add/: basic.cpp
test/bdd/: basic.cpp  blif.cpp  n_queens.cpp  queen.cpp
test/bhd/: basic.cpp  debug.cpp
test/bmd/: basic.cpp  mult.cpp
test/kfdd/: basic.cpp  blif.cpp  kfdd_basic.cpp  kfdd_blif.cpp  kfdd_normal.cpp  kfdd_queen.cpp  kfdd_ringsum.cpp  n_queens.cpp  queen.cpp  restr_compose.cpp  ringsum.cpp  rsnf.cpp
test/mtbdd/: basic.cpp  picture.cpp
test/phdd/: basic.cpp  minifloat.cpp  phdd.cpp  phdd_tests.cpp
